data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3351.wast
;; 10. **Test Description**:    Create a module where a function with a valid index calls another function within a loop controlled by a `br` instruction. Test for infinite loop behavior if the `br` condition inaccurately references function return types leading to non-exit conditions.

(assert_invalid
 (module
  (func $f (param i32) (result i32)
   (local.get 0)
  )
  (func $g
   (local i32)
   (loop
    (call $f (local.get 0))
    (br_if 0 (i32.ne (i32.const 1) (local.get 0)))
   )
  )
 )
 "type mismatch"
)